--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -38,3 +38,15 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Ubuntu, sans-serif;
   color: var(--title-color);
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
